Shang New Live/src/objects/Lease_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Trading_Date__c</fullName>
        <label>Actual Trading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Sq_Ft__c</fullName>
        <formula>Unit__r.NLA_SQF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area (Sq.Ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorised_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Tenant&apos;s contact information.</inlineHelpText>
        <label>Authorised Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lease Units (Handover Contact)</relationshipLabel>
        <relationshipName>Handover_Lease_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Rent_sqf__c</fullName>
        <description>Created for Reporting purpose</description>
        <formula>IF ( Area_Sq_Ft__c = 0, 0, 
Current_Base_Rent__c  /  Area_Sq_Ft__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Base Rent / Area (Sqft)</inlineHelpText>
        <label>Base Rent (sqf)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CT_Meter_No__c</fullName>
        <label>CT Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Converted_From_LOI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted From LOI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Base_Rent__c</fullName>
        <description>Seems not in Use</description>
        <label>Current Base Rent</label>
        <summarizedField>Lease_Charges__c.Base_Rent__c</summarizedField>
        <summaryFilterItems>
            <field>Lease_Charges__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lease_Charges__c.Name</field>
            <operation>contains</operation>
            <value>Base Rent</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lease_Charges__c.Base_Rent__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Lease_Charges__c.Lease_Unit__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Day_s_in_expired__c</fullName>
        <formula>(Lease_End_Date__c - TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day(s) in expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extension_Date__c</fullName>
        <label>Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fit_Out_Date__c</fullName>
        <label>Fit Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gas_Meter_No__c</fullName>
        <externalId>true</externalId>
        <label>Gas Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_CheckList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate CheckList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Fit_Out_LC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Fit Out LC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Handover_Shop_CheckList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Handover Shop CheckList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Takeover_Shop_CheckList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Takeover Shop CheckList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handover_Date__c</fullName>
        <description>Date for unit handover to tenant</description>
        <label>Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handover_Signed_off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be updated via Checklist - Process Builder
This is used to create Fit-out Deposit records under Lease Unit</description>
        <label>Handover Signed-off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Horse_Power__c</fullName>
        <label>Horse Power</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Agreement_No__c</fullName>
        <label>Lease Agreement No.</label>
        <referenceTo>Lease__c</referenceTo>
        <relationshipLabel>Lease Units</relationshipLabel>
        <relationshipName>Lease_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lease_Duration__c</fullName>
        <description>Created for Reporting purpose</description>
        <formula>TEXT (Lease_Agreement_No__r.Lease_Tenure_Mths__c ) &amp; &quot; months;&quot;
&amp;&quot; &quot;&amp;
TEXT (Lease_Agreement_No__r.Lease_Tenure_Days__c )&amp; &quot; days&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lease Tenure from related Lease</inlineHelpText>
        <label>Lease Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date__c</fullName>
        <label>Lease End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date_formula__c</fullName>
        <description>Created to be referred in formula</description>
        <formula>Lease_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date__c</fullName>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Status__c</fullName>
        <label>Lease Unit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pre-Terminated</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Unit_Status__c</fullName>
        <label>Lease Unit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Extended</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Pre-Terminated</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>Unit__r.Level__r.Name</formula>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Loss__c</fullName>
        <label>Line Loss</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Module__c</fullName>
        <label>Mobile Module</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_End_Date__c</fullName>
        <inlineHelpText>This field would be populated only in the case of Extension or Pre-Termination and would show the Original End Date of this Lease Unit.</inlineHelpText>
        <label>Original End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Operation&apos;s contact information.</inlineHelpText>
        <label>Person In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lease Units (Person In Charge)</relationshipLabel>
        <relationshipName>PIC_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Extension_No__c</fullName>
        <externalId>true</externalId>
        <label>Phone Extension No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Factor__c</fullName>
        <label>Power Factor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Unit__r.Property_Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>Lease_Agreement_No__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Termination__c</fullName>
        <label>Reason for Termination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rent_Free_End_Date__c</fullName>
        <label>Rent Free End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Free_Start_Date__c</fullName>
        <label>Rent Free Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_per_Sq_Feet__c</fullName>
        <formula>IF (Current_Base_Rent__c &gt; 0 , Current_Base_Rent__c  / Area_Sq_Ft__c ,
      0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent per Sq. Feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <description>Used for reporting
Space type from related Unit</description>
        <formula>TEXT (  Unit__r.Space_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Space Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Meter_No__c</fullName>
        <label>Sub Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Trading_Date__c</fullName>
        <label>Target Trading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <formula>Lease_Agreement_No__r.Tenant__r.Name</formula>
        <label>Tenant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Id__c</fullName>
        <formula>Unit__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Status__c</fullName>
        <formula>Unit__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an &apos;Active&apos; Unit.</errorMessage>
            <filterItems>
                <field>Units__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Lease Units</relationshipLabel>
        <relationshipName>Lease_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Lease_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Lease Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_Meter_No__c</fullName>
        <label>Water Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Lease Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lease_Agreement_No__c</columns>
        <columns>Unit__c</columns>
        <columns>Property__c</columns>
        <columns>Tenant__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllJMTLeaseUnits</fullName>
        <columns>NAME</columns>
        <columns>Lease_Agreement_No__c</columns>
        <columns>Unit__c</columns>
        <columns>Property__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>contains</operation>
            <value>JMT</value>
        </filters>
        <label>All JMT Lease Units</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-LU-{00000000}</displayFormat>
        <label>Lease Unit No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>